--- a/FrontEnd/assets/css/style.css
+++ b/FrontEnd/assets/css/style.css
@@ -265,7 +265,7 @@ nav li.active:hover {
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
----
+
 #add-work select ,
 #add-work select option {
 	background-color: inherit; /* bug width firecfox */
@@ -345,9 +345,8 @@ input[type="submit"]:hover {
 	background-color: #0E2F28;
 }
 
-button[type="submit"]:disabled {
+button[type="submit"].wrong {
 	background-color: #A7A7A7;
-	cursor: not-allowed;
 }
 
 .error {
@@ -551,7 +550,9 @@ hr {
 	margin-top: 47px;
 	margin-bottom: 5px;
 	color: #B3B3B3;
-	size: 1px;
+	background-color: #B3B3B3;
+	height: 1px;
+	border-width: 0;
 	width: 420px;
 }
 
